--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,8 @@
 
     <string name="app_name">校讯通</string>
     <string name="title_activity_main">校讯通</string>
-    <string name="shops">跳淘淘</string>
 	<string name="learns_word">成绩查询</string>
-	<string name="shops_word">二手交易</string>
+	<string name="shops_word">淘宝</string>
 	<string name="teachers_word">教师联系方式</string>
 	<string name="lessons_word">课程表</string>
 	<string name="lives_word">校园生活</string>
@@ -16,8 +15,10 @@
 	<string name="shops_shop_accessories">小型物件</string>
 	<string name="shops_shop_add">卖东西</string>
 	<string name="shops_shop_check">查看你的在售商品</string>
-	<string name="teachersearch1">按教师姓名查询</string>
-	<string name="teachersearch2">按所在班级查询</string>
+	<string name="teacher_search">教师姓名查询</string>
+	<string name="teacher_department">系部模糊查询</string>
+	<string name="lesson_depart">请选择院系：</string>
+	<string name="lesson_class">请选择班级：</string>
 	<string name="res">返回</string> 
 	<string name="oks">确定</string>
 </resources>
